--- a/root.css
+++ b/root.css
@@ -8,11 +8,11 @@
 :root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #cceecc; /* */
-  --color-2: #e3f1af; /* */
+  --color-1: #f7a5ca; /* */
+  --color-2: #d19ac7; /* */
   --color-3: #cc5288; /* main color */
   --color-4: #f7a5ca; /* sub  color */
-  --color-5: #cff1af; /* */
+  --color-5: #d3dede; /* */
 
   /* --logo-URL: url("https://small_sunshine_.github.io/tgd_osu_css/img/logo.png"); */
   --logo-URL: url("https://d4fodtu7cqfym.cloudfront.net/images/logo_new.png");
